# comrade-glacier

./: .gitignore  README.md  SECURITY.md  logs.txt  setup.sh
.github/workflows/: bash.yml  markdown.yml  rust.yml  yaml.yml
project/: .env  Cargo.toml
project/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
project/migrations/2024-03-31-103845_ports/: down.sql  up.sql
project/src/: bdd.rs  domain.rs  get_cert.rs  ip.rs  logger.rs  main.rs  model.rs  models.rs  schema.rs
