[package]
name = "comrade_glacier"
version = "0.1.0"
edition = "2021"


[dependencies]
chrono = "0.4.37"
log = "0.4.21"
diesel = { version = "2.2.1", features = ["postgres", "128-column-tables"] }
dotenv = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }
regex = "1.10.4"
nom = "7.1.3"
openssl = "0.10.52"
x509-certificate = "0.23.1"
x509-parser = "0.16.0"
serde_json = "1.0.115"
dns-lookup = "2.0.4"


[profile.release]
lto = "fat"
codegen-units = 1

[profile.dev]
codegen-units = 1
